--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -12,28 +12,36 @@ div.highlight pre {
 }
 
 div.highlight {
-    margin-top: 1.5em;
-    margin-bottom: 1.5em;
+    margin-top: 1.7em;
+    margin-bottom: 2em;
 }
 
-@media (max-width: 840px) {
+pre {
+    margin-top: 1.7em;
+    margin-bottom: 2em;
+    padding-top: 1em;
+    padding-bottom: 1em;
+    padding-left: 1em;
+}
+
+@media (max-width: 945px) {
     .container {
         max-width: 90%;
     }
 
     code {
-        font-size: 0.6em;
+        font-size: 0.8em;
     }
 }
 
 @media (max-width: 579px) {
     code {
-        font-size: 0.5em;
+        font-size: 0.6em;
     }
 }
 
 @media (max-width: 487px) {
     code {
-        font-size: 0.38em;
+        font-size: 0.5em;
     }
 }
